--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -15,6 +15,8 @@ body {
   --medium-gray: rgb(96, 96, 96);
   --dark-gray: rgb(13, 13, 13);
   --header-height: 40px;
+  --animation-duration: 0.2s;
+  --animation-timing-curve: ease-in-out;
 }
 
 .container {
