--- a/client/src/layouts/Header/Header.module.scss
+++ b/client/src/layouts/Header/Header.module.scss
@@ -1,4 +1,4 @@
-.header {
+.container {
   display: flex;
   align-items: center;
   position: sticky;
@@ -6,15 +6,15 @@
   background-color: white;
   box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.4);
   padding: 0 0.5rem;
-  height: var(--header-hight);
+  height: var(--header-height);
 
-  .menuIconButton {
+  .sidebarToggle {
     background: none;
     border: none;
     padding: 0;
   }
 
-  .menuIcon {
+  .toggleIcon {
     width: 24px;
     height: 24px;
     fill: var(--medium-gray);
