--- a/client/src/layouts/Header/Header.module.scss
+++ b/client/src/layouts/Header/Header.module.scss
@@ -1,12 +1,15 @@
 .container {
-  display: flex;
-  align-items: center;
   position: sticky;
   top: 0;
-  background-color: white;
-  box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.4);
+
+  display: flex;
+  align-items: center;
   padding: 0 0.5rem;
   height: var(--header-height);
+  z-index: 100;
+
+  background-color: white;
+  box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.4);
 
   .sidebarToggle {
     background: none;
