--- a/client/src/layouts/Sidebar/Sidebar.module.scss
+++ b/client/src/layouts/Sidebar/Sidebar.module.scss
@@ -1,3 +1,18 @@
+@use '~styles/partials/mixins';
+@use '~styles/partials/variables';
+
+.placeholder {
+  @media only screen and (max-width: variables.$mobile-width) {
+    display: none;
+
+    &.open {
+      display: block;
+      flex: none;
+      width: var(--collapsed-sidebar-width);
+    }
+  }
+}
+
 .container {
   position: sticky;
   top: var(--header-height);
@@ -5,21 +20,29 @@
 
   display: flex;
   flex-direction: column;
-  flex-shrink: 0;
+  flex: none;
   justify-content: stretch;
   align-items: center;
 
-  width: 75px;
+  width: var(--collapsed-sidebar-width);
   height: calc(100vh - var(--header-height));
   padding-top: 1rem;
+  z-index: 100;
 
   border-right: 1px solid var(--light-gray);
+  background-color: var(--lighttest-gray);
 
   overflow: hidden;
   transition: width var(--animation-duration) var(--animation-timing-curve);
 
   &.open {
-    width: 200px;
+    width: var(--expanded-sidebar-width);
+
+    @media only screen and (max-width: variables.$mobile-width) {
+      position: absolute;
+      left: 0;
+      flex: none;
+    }
 
     .topSection {
       height: 105px;
@@ -77,11 +100,6 @@
         to {
           transform: rotate(360deg);
         }
-      }
-
-      & > img {
-        width: 100%;
-        height: 100%;
       }
     }
 
