--- a/client/src/layouts/Header/Header.module.scss
+++ b/client/src/layouts/Header/Header.module.scss
@@ -6,6 +6,8 @@
     justify-content: end;
     gap: 2rem;
 
+    transition: background 0.3s ease;
+
     button {
       display: none;
     }
@@ -18,7 +20,7 @@
       height: 1.6rem;
       width: 4.2rem;
       cursor: pointer;
-      border-radius: 0.8rem;
+      border-radius: 0.5rem;
 
       svg {
         font-size: 1.2rem;
@@ -28,6 +30,8 @@
         align-items: center;
         justify-content: center;
         padding: 0.15rem;
+
+        transition: all 0.3s ease;
 
         &.active {
           background: var(--color-primary);
@@ -49,6 +53,9 @@
       svg {
         width: 3rem;
         height: 3rem;
+        fill: var(--color-dark);
+
+        transition: fill 0.3s ease;
       }
     }
   }
@@ -72,6 +79,8 @@
       margin: 0;
       z-index: 2;
       box-shadow: 0 1rem 1rem var(--color-light);
+
+      transition: box-shadow 0.3s ease;
 
       button {
         display: inline-block;
