--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,37 +1,34 @@
+@use '~styles/partials/variables';
+
 @import url('https://fonts.googleapis.com/css2?family=Exo:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@300;400;500;600;700;800&display=swap');
 
 :root {
   --color-primary: #7380ec;
   --color-danger: #ff7782;
-  --color-success: #41f1b6;
-  --color-warning: #ffbb55;
-  --color-white: #fff;
   --color-info-dark: #7d8da1;
-  --color-info-light: #dce1eb;
+
+  --color-background: #f6f6f9;
   --color-dark: #363949;
   --color-light: rgba(132, 139, 200, 0.18);
-  --color-primary-variant: #111e88;
-  --color-dark-variant: #677483;
-  --color-background: #f6f6f9;
+
+  --header-height: 60px;
+  --content-margin: calc(var(--header-height) + 2rem);
 }
 
 [data-theme='dark'] {
   --color-background: #181a1e;
-  --color-white: #202528;
-  --color-dark: #efeffd;
-  --color-dark-variant: #a3bdcc;
+  --color-dark: #efeffde5;
   --color-light: rgba(0, 0, 0, 0.4);
-  --box-shadow: 0 2rem 3rem var(--color-light);
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  outline: 0;
   appearance: none;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  outline: 0;
   border: 0;
   text-decoration: none;
   list-style: none;
@@ -42,35 +39,30 @@ html {
 }
 
 body {
+  font-family: 'Poppins', sans-serif;
   width: 100vw;
   height: 100vh;
-  font-family: 'Poppins', sans-serif;
   background: var(--color-background);
-  user-select: none;
   overflow-x: hidden;
+
   transition: background 0.3s ease;
 }
 
 .container {
   display: grid;
-  width: 96%;
+  grid-template-columns: 14rem auto;
   margin: 0 auto;
-  gap: 1.8rem;
-  grid-template-columns: 14rem auto 23rem;
+
   color: var(--color-dark);
 
   .content {
-    margin-top: 1rem;
+    margin: var(--content-margin) 2rem 2rem;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: variables.$mobile-width) {
   .container {
     width: 100%;
     grid-template-columns: 1fr;
-
-    .content {
-      margin: 6rem 1rem 0;
-    }
   }
 }
