--- a/client/src/layouts/Sidebar/Sidebar.module.scss
+++ b/client/src/layouts/Sidebar/Sidebar.module.scss
@@ -1,4 +1,5 @@
 @use '~styles/partials/variables';
+@use '~styles/partials/mixins';
 
 .container {
   height: 100vh;
@@ -28,7 +29,8 @@
     .navlink {
       min-height: 3rem;
 
-      display: flex;
+      display: grid;
+      grid-template-columns: auto auto 1fr;
       gap: 1rem;
       align-items: center;
 
@@ -37,12 +39,22 @@
 
       transition: all 0.3s ease;
 
+      h3 {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+
+        &:hover,
+        &:focus {
+          span {
+            display: inline-block;
+            animation: scrollText 5s ease 0s infinite normal;
+          }
+        }
+      }
+
       &:hover {
         color: var(--color-primary);
-
-        svg {
-          margin-left: 1rem;
-        }
       }
 
       &:last-child {
@@ -50,21 +62,21 @@
       }
 
       svg {
-        min-width: 1.5rem;
-        min-height: 1.5rem;
+        width: 1.5rem;
+        height: 1.5rem;
 
         transition: all 0.3s ease;
       }
 
       &.active {
-        margin-left: 0;
+        margin-left: -4px;
 
         color: var(--color-primary);
         background: var(--color-light);
 
         &::before {
           content: '';
-          width: 6px;
+          width: 8px;
           height: 100%;
           position: relative;
           left: 0;
@@ -84,7 +96,7 @@
   }
 
   @media screen and (max-width: variables.$mobile-width) {
-    width: 18rem;
+    width: var(--sidebar-width);
     position: fixed;
     margin-top: 0;
     left: -100%;
@@ -101,11 +113,26 @@
     &.open {
       display: block;
     }
+  }
+}
 
-    @keyframes showMenu {
-      to {
-        left: 0;
-      }
-    }
+@keyframes showMenu {
+  to {
+    left: 0;
+  }
+}
+
+@keyframes scrollText {
+  0% {
+    transform: translateX(0%);
+  }
+  90% {
+    transform: translateX(-100%);
+  }
+  95% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(0%);
   }
 }
