--- a/client/src/components/ThemeSwitcher/ThemeSwitcher.module.scss
+++ b/client/src/components/ThemeSwitcher/ThemeSwitcher.module.scss
@@ -7,8 +7,8 @@
   justify-content: space-between;
   align-items: center;
 
-  color: var(--color-dark);
-  background: var(--color-light);
+  color: var(--color-accent);
+  background: var(--color-dark);
 
   border-radius: 0.5rem;
 
