--- a/client/src/layouts/Header/Header.module.scss
+++ b/client/src/layouts/Header/Header.module.scss
@@ -10,7 +10,7 @@
   padding: 0 1rem;
 
   background: var(--color-background);
-  box-shadow: 0 1rem 1rem var(--color-light);
+  box-shadow: 0 1rem 1rem var(--color-dark);
   z-index: 5;
 
   transition: background 0.3s ease;
@@ -30,7 +30,7 @@
       cursor: pointer;
       display: none;
 
-      color: var(--color-dark);
+      color: var(--color-accent);
       background: transparent;
     }
   }
@@ -59,7 +59,7 @@
       svg {
         width: 3rem;
         height: 3rem;
-        fill: var(--color-dark);
+        fill: var(--color-accent);
 
         transition: fill 0.3s ease;
       }
