--- a/client/src/layouts/Sidebar/Sidebar.module.scss
+++ b/client/src/layouts/Sidebar/Sidebar.module.scss
@@ -73,7 +73,7 @@
         margin-left: -4px;
 
         color: var(--color-primary);
-        background: var(--color-light);
+        background: var(--color-dark);
 
         &.marquee {
           @extend .marquee;
@@ -102,7 +102,7 @@
 
     padding-right: 2rem;
 
-    box-shadow: 1rem 3rem 4rem var(--color-light);
+    box-shadow: 1rem 3rem 4rem var(--color-dark);
     z-index: 3;
 
     transition: left 0.3s ease-in-out;
