--- a/client/src/components/Table/Table.module.scss
+++ b/client/src/components/Table/Table.module.scss
@@ -21,10 +21,12 @@ table {
   }
 
   thead {
+    position: sticky;
+    top: calc(var(--header-height) - 1px);
+    z-index: 10;
+
     font-size: 0.875rem;
     font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 1px;
 
     color: var(--color-background);
     background-color: var(--color-accent);
