--- a/client/src/components/Accordion/Accordion.module.scss
+++ b/client/src/components/Accordion/Accordion.module.scss
@@ -2,6 +2,12 @@
 @use '~styles/partials/variables';
 
 .container {
+  transition: background 0.1s ease;
+
+  &:hover {
+    background: var(--color-dark);
+  }
+
   button {
     min-height: 3rem;
 
