--- a/client/src/layouts/Sidebar/Sidebar.module.scss
+++ b/client/src/layouts/Sidebar/Sidebar.module.scss
@@ -34,13 +34,13 @@
       gap: 1rem;
       align-items: center;
 
-      margin-left: 2rem;
       color: var(--color-info-dark);
 
-      transition: all 0.3s ease;
+      transition: all 0.1s ease;
 
       &:hover {
         color: var(--color-primary);
+        background: var(--color-dark);
       }
 
       &:last-child {
@@ -56,6 +56,8 @@
       }
 
       svg {
+        margin-left: 2rem;
+
         width: 1.5rem;
         height: 1.5rem;
 
@@ -74,10 +76,6 @@
 
         color: var(--color-primary);
         background: var(--color-dark);
-
-        &.marquee {
-          @extend .marquee;
-        }
 
         &::before {
           content: '';
