ci: update marquee timing function

--- a/client/src/styles/partials/_mixins.scss
+++ b/client/src/styles/partials/_mixins.scss
@@ -18,7 +18,7 @@
 
 @mixin Marquee() {
   display: inline-block;
-  animation: scrollText 3s ease 0s infinite normal;
+  animation: scrollText 3s ease-in-out 0s infinite normal;
 
   @keyframes scrollText {
     0% {
